--- a/colmarStyles.css
+++ b/colmarStyles.css
@@ -512,6 +512,11 @@ footer span {
 
     }
 
+    #flexSixBoxMobile a {
+        text-decoration: none;
+        color: #4b4646;
+    }
+
     /*----------------thesis exhibit mobile-----------*/
 
     #thesisExhibit {
